v1/tests/elab/ok/field_proj/synth_field_proj.pion
def a = {x=5}.x;
def b = {x=5,y=false}.x;
def c = {x=5,y=false}.y;
