v1/tests/elab/errors/record_lit/duplicate_fields.pion
def error = {x=1,y=false,x=true};
